Rough Desktop Slider nav and overflow fix (perhaps)

--- a/static/style.css
+++ b/static/style.css
@@ -5,7 +5,6 @@
 
 body {
 		background-color: #f7f5f0;
-		overflow: hidden;
 		margin-top: 0;
 		margin-bottom: 0;
 		margin-left: 0;
@@ -14,16 +13,25 @@ body {
 		padding-bottom: 0;
 		padding-left: 0;
 		padding-right: 0;
-		overflow: hidden;
+		overflow-x: hidden;
 	}
 
 
-::selection {
-  background: red; /* WebKit/Blink Browsers */
+.main-container {
+	min-height: 100vh; /* will cover the 100% of viewport */
+	overflow: hidden;
+	display: block;
+	position: relative;
+	padding-bottom: 100px; /* height of your footer */
+	overflow-x: hidden;
+}
+
+/*::selection {
+  background: red;
 }
 ::-moz-selection {
-  background: red; /* Gecko Browsers */
-}
+  background: red;
+}*/
 
 #landing_page {
 	position: absolute;
@@ -53,12 +61,16 @@ body {
 	-webkit-animation:mymove 0.7s; /* Safari and Chrome */
 }
 
+.landing_par {
+	margin-top: 165px;
+}
+
 #landing_page p {
 	color: #383838;
 	/*position: relative;*/
 	width: 35%;
 	margin-left: 10%;
-	margin-top: 165px;
+	/*margin-top: 165px;*/
 	/*padding-top: 50vh;*/
     line-height: 2em;
     font-family: 'Roboto', sans-serif;
@@ -140,81 +152,45 @@ body {
 	/*transition: 0.4s;*/
 }
 
+/*#######################################################################*/
+
+/*Navigation*/
+
 .nav_list {
 	text-align: right;
 	position: absolute;
-	display: inline;
 	top: 10%;
 	right: 10%;
 	left: 10%;
 	width: 80%;
 	list-style: none;
-	padding-bottom: 20px;
 	opacity: 0;
 	border-bottom: 2px solid rgba(56, 56, 56, .3);
-	-webkit-transition: all 0.5s ease;
-    -moz-transition: all 0.5s ease;
-    -o-transition: all 0.5s ease;
-    transition: all 0.5s ease;
-    animation:opacp 1s;
-	-moz-animation:opacp 1s; /* Firefox */
-	-webkit-animation:opacp 1s; /* Safari and Chrome */
+	animation:opacp 1s;
+	-moz-animation:opacp 1s;
+	-webkit-animation:opacp 1s;
 	-webkit-animation-delay: .7s;
 	animation-delay: .7s;
 	-webkit-animation-fill-mode: forwards;
 }
 
-.nav_list li {
-	padding-top: 20px;
+.nav_list ul li {
+  	padding-top: 20px;
 	padding-bottom: 22px;
 	opacity: 1;
 	display: inline;
-	/*border-bottom: 2px solid #383838;*/
+	text-align: right;
 	-webkit-transition: all 0.2s ease;
     -moz-transition: all 0.2s ease;
     -o-transition: all 0.2s ease;
     transition: all 0.2s ease;
-   }
+}
 
-.nav_list li:not(:last-child) {
+.nav_list li:not(:nth-child(4)) {
 	padding-right: 6%;
 }
 
-.nav_list li a {
-	color: #383838;
-	font-family: "Roboto", sans-serif;
-	font-weight: 400;
-	text-decoration: none;
-	text-transform: uppercase;
-	letter-spacing: 1px;
-	font-size: 0.9em;
-	/*transition: 0.2s;   vendorless fallback */
-
-}
-
-
-
-
-
-
-
-/*.container {
-  width: 50%;
-  margin: 0 auto;
-  top: 10%;
-  right: 10%;
-}
-
-.container ul li {
-  display: inline;
-  text-align: right;
-}
-
-.container li:not(:last-child) {
-	padding-right: 6%;
-}
-
-.container a {
+.nav_list a {
 	color: #383838;
 	font-family: "Roboto", sans-serif;
 	font-weight: 400;
@@ -224,29 +200,31 @@ body {
 	font-size: 0.9em;
 }
 
-.two:hover ~ hr {
-  margin-left: 13%;
-  width: 73px;
+.portfolio:hover ~ hr {
+	margin-left: 67.65%;
+	width: 73px;
 }
 
-.three:hover ~ hr {
-  margin-left: 30.5%;
-  width: 54px;
+.resume:hover ~ hr {
+	margin-left: 80.30%;
+	width: 54px;
 }
 
-.four:hover ~ hr {
-  margin-left: 45%;
-  width: 60px;
+.contact:hover ~ hr {
+	margin-left: 91.22%;
+	width: 60px;
 }
 
 hr {
-  height: .25rem;
-  width: 43px;
-  margin: 0;
-  background: tomato;
-  border: none;
-  transition: .3s ease-in-out;
-}*/
+	position: absolute;
+	margin-left: 57.65%;
+	margin-top: 10px;
+	height: .25rem;
+	width: 43px;
+	background: #383838;
+	border: none;
+	transition: 0.3s ease-in-out;
+}
 
 
 
@@ -301,13 +279,11 @@ hr {
 }
 
 footer {
-  position: absolute;
-  right: 0;
-  bottom: 0;
-  left: 0;
-  /*padding: 1rem;*/
-  /*background-color: #efefef;*/
-  /*text-align: center;*/
+	position: absolute;
+	right: 0;
+	bottom: 0;
+	left: 0;
+	width: 100%;
 }
 
 .social-media {
@@ -318,14 +294,10 @@ footer {
 }
 
 .fa {
-	/*padding: 20px;*/
 	color: #383838;
 	font-size: 1.5em;
 	width: 35px;
-	/*width: 10px;*/
-	/*text-align: center;*/
 	text-decoration: none;
-	/*margin-left: 10%;*/
 	opacity: 0;
 	animation:opacp 1s;
 	-moz-animation:opacp 1s; /* Firefox */
@@ -405,6 +377,7 @@ a .fa {
     right: 10%;
     cursor: pointer;
     margin-bottom: 0px;
+    z-index: 2000;
     /*transform: translate(-50%, -50%);*/
 }
 
@@ -564,7 +537,7 @@ a .fa {
 		position: absolute;
 		list-style: none;
 		left: 110%;
-		top: 30vh;
+		/*top: 30vh;*/
 		padding-left: 10%;
 		/*margin: 0;*/
 		border-left: 2px solid rgba(56, 56, 56, .3);;
@@ -601,7 +574,7 @@ a .fa {
 		position: absolute;
 		list-style: none;
 		left: 10%;
-		top: 30vh;
+		height: 100vh;
 		padding-left: 10%;
 		/*margin: 0;*/
 		border-left: 2px solid rgba(56, 56, 56, .3);;
@@ -609,6 +582,10 @@ a .fa {
 	    -moz-transition: all 0.5s ease;
 	    -o-transition: all 0.5s ease;
 	    transition: all 0.5s ease;
+	}
+
+	.nav_open ul{
+		margin-top: 30vh;
 	}
 
 	.nav_open li a {
